UC_MainMenu.ascx
    SideMenu                                            -- added new menu item for Analyst Search under LIMS Search
        <asp:MenuItem Text="$Menu_LIMS_Search_Analyst" Value="Analyst" NavigateUrl="~/AnalystSearch.aspx"></asp:MenuItem>

UC_MainMenu.ascx.cs
    SetMenuItems()          
        if (!PLCSession.CheckUserOption("ANALSEARCH"))  -- added to check if ANALSEARCH user option is enabled or disabled

PLC_SessionVars.cs
    DefaultLocalizedTextValue
        {"Menu_LIMS_Search_Analyst", "Analyst"},        -- added to have a default text value

PLCButtonPanel.cs  
    PLCShowSearchButtons()                              -- added to new property to show Analyst search and clear buttons
    dynactrl()                                          --
        if (PLCShowSearchButtons)
    
    protected void searchbutton_Click(object sender, EventArgs e)
    protected void clearbutton_Click(object sender, EventArgs e)
    public void ShowAlert(Page page)

    GetTablesAndAlias()                                 -- added helper functions
    GetTableNameAndAlias()
    GetTableFieldJoins()

AnalystSearch.aspx                                      -- added new page for Analyst Search
AnalystSearch.aspx.cs                                   
    protected void Page_Load(object sender, EventArgs e)
    private void RestoreSearchCriteria()                

TV_AUTHCODE
    'ANALSEARCH', 'Analyst Search', '0', 'Program Access/PRELIMS/Web'       -- added to be used as user option for Analyst Search button